# spscan

./: LICENSE  README.md  build.sh  init.py  pyproject.toml
src/: __init__.py  main.py
src/spscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
